--- a/force-app/main/default/pages/SummitEvents.page
+++ b/force-app/main/default/pages/SummitEvents.page
@@ -7,7 +7,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
 <apex:page id="SummitEvents" showHeader="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" lightningStylesheets="true" standardStylesheets="false" cache="false" docType="html-5.0" controller="SummitEventsController">
     <apex:slds />
-    <apex:composition template="GeneralSLDS">
+    <apex:composition template="{!template}">
         <apex:define name="metaPageTitle">Summit Events</apex:define>
         <apex:define name="pageTitle"><a href="/SummitEvents">Events</a></apex:define>
         <apex:define name="scriptsHead">
