--- a/force-app/main/default/pages/SummitEventsCancelReview.page
+++ b/force-app/main/default/pages/SummitEventsCancelReview.page
@@ -5,37 +5,41 @@ license that can be found in the LICENSE file.
 Created by Thaddaeus Dahlberg on 5/1/2018.
 -->
 
-<apex:page id="SummitEventsCancelReview" showHeader="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" standardStylesheets="false" docType="html-5.0" cache="false" controller="SummitEventsCancelReviewController" action="{!checkEventDetails}">
+<apex:page id="SummitEventsCancelReview" showHeader="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" standardStylesheets="false" docType="html-5.0" cache="false" controller="SummitEventsCancelReviewController">
     <apex:composition template="{!templateSelected}">
         <apex:define name="metaPageTitle">
-            {!evtInstance.Event__r.Event_Name__c}
+            {!eventPage.Event_Name__c}
             <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}" value="{! ' - ' + evtInstance.Instance_Title__c}"/>
             - Cancel
         </apex:define>
-        <apex:define name="pageTitle"><a href="{!eventRegistration.Event__r.Event_Home_Link_URL__c}">{!eventRegistration.Event__r.Event_Home_Link_Title__c}</a></apex:define>
+        <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
         <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
             <script>
                 window.dataLayer = window.dataLayer || [];
                 dataLayer.push({
-                    'account': '{!IF(!ISBLANK(eventRegistration.Event__r.Account__r.Name),eventRegistration.Event__r.Account__r.Name, '')}',
-                    'audience': '{!IF(!ISBLANK(eventRegistration.Event__r.Audience__c),eventRegistration.Event__r.Audience__c, '')}',
-                    'eventLabel': '{!eventRegistration.Event__r.Event_Name__c}{!IF(!ISBLANK(eventInstance.Instance_Title__c),' - ' + eventInstance.Instance_Title__c,'')}',
-                    'category': '{!IF(!ISBLANK(eventRegistration.Event__r.Filter_Category__c), eventRegistration.Event__r.Filter_Category__c, '')}',
-                    'sponsor': '{!IF(!ISBLANK(eventRegistration.Event__r.Event_Sponsor__c), eventRegistration.Event__r.Event_Sponsor__c, '')}',
+                    'account': '{!IF(!ISBLANK(eventPage.Account__r.Name),eventPage.Account__r.Name, '')}',
+                    'audience': '{!IF(!ISBLANK(eventPage.Audience__c),eventPage.Audience__c, '')}',
+                    'eventLabel': '{!eventPage.Event_Name__c}{!IF(!ISBLANK(eventInstance.Instance_Title__c),' - ' + eventInstance.Instance_Title__c,'')}',
+                    'category': '{!IF(!ISBLANK(eventPage.Filter_Category__c), eventPage.Filter_Category__c, '')}',
+                    'sponsor': '{!IF(!ISBLANK(eventPage.Event_Sponsor__c), eventPage.Event_Sponsor__c, '')}',
                     'page': '{!$CurrentPage.Name}'
                 });
             </script>
         </apex:define>
         <apex:define name="sectionNav"/>
+
         <apex:define name="body">
-            <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                <apex:messages />
-            </div>
-            <apex:form id="SummitEventsRegistrationCancelReview" rendered="{!!eventOver && !eventNotFound && eventRegistration.Status__c != 'Cancelled'}" styleClass="slds-grid slds-wrap">
-                <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
+            <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
+
+                <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <apex:messages/>
+                </div>
+
+                <apex:form id="SummitEventsRegistrationCancelReview" styleClass="slds-grid slds-wrap" style="width:100%">
+
                     <!-- EVENT BREADCRUMB -->
-                    <div class="slds-col slds-size_1-of-1">
+                    <apex:outputPanel layout="block" styleClass="slds-col slds-p-vertical_x-small slds-size_1-of-1" rendered="{!!ISBLANK(eventPage.Event_Name__c)}">
                         <nav role="navigation" aria-label="Breadcrumbs">
                             <ol class="slds-breadcrumb slds-list_horizontal">
                                 <apex:outputPanel rendered="{!!ISBLANK(eventPage.Event_Name__c)}" layout="none">
@@ -49,61 +53,86 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </apex:outputPanel>
                             </ol>
                         </nav>
-                    </div>
-                </div>
-                <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                    <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
-                        <apex:outputText value="{!eventRegistration.Event__r.Event_Cancel_Review_Title__c}"/>
-                    </h2>
-                    <p class="slds-text-body slds-p-vertical_xx-small regularLists">
-                        <apex:outputText value="{!eventRegistration.Event__r.Event_Cancel_Review_Description__c}" escape="false"/>
-                    </p>
-                </div>
-                <div id="reviewWrapper" class="slds-col slds-size_1-of-1 slds-p-vertical_x-small">
-                    <h3 class="slds-text-heading_medium slds-p-vertical_small">
-                        <apex:outputText value="{!eventRegistration.Event__r.Name}"/>
-                    </h3>
-                    <p class="slds-text-body slds-p-vertical_xx-small regularLists">
-                        <apex:outputText escape="false" value="{!eventRegistration.Event__r.Event_description__c}"/>
-                    </p>
-                    <ul class="slds-list_dotted">
-                        <apex:repeat value="{!appointments}" var="ap">
-                            <li>
-                                <apex:outputText value="{!ap.Appointment_Title__c}"/>
-                                <apex:outputText value="{!ap.Appointment_Category__c}" rendered="{!IF(!ISBLANK(ap.Appointment_Category__c), true, false)}"/>
-                                <br/><em>
-                                    <apex:outputText value="{!ap.Appointment_Type__c}"/>
-                                </em>
-                            </li>
-                        </apex:repeat>
-                    </ul>
-                    <apex:outputPanel layout="block" rendered="{!IF (evt.Status__c != 'Cancelled', true, false)}">
-                        <p class="slds-text-body slds-p-vertical_small">
-                            <apex:commandLink action="{!cancelRegistration}" Value="Cancel Regisistration" id="cancelReg" onClick="return confirm('Are you sure you want to cancel this registration?');" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                        </p>
-                    </apex:outputPanel>
-                    <apex:outputPanel layout="block" rendered="{!IF (evt.Status__c = 'Cancelled', true, false)}">
-                        <p class="slds-text-body slds-p-vertical_xx-small warning">
-                            <apex:outputText value="{!evt.Event__r.Event_Cancelled_Notification_Text__c}"/>
-                        </p>
                     </apex:outputPanel>
 
-                </div>
-            </apex:form>
-            <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small" rendered="{!eventRegistration.Status__c = 'Cancelled'}">
-                <h2 class="slds-text-heading_large slds-p-vertical_xx-small">Your registration has been Cancelled</h2>
-                <p class="slds-text-body slds-p-vertical_xx-small">The registration record we have on file has been cancelled.</p>
-            </apex:outputPanel>
-            <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small" rendered="{!eventNotFound && !eventOver}">
-                <h2 class="slds-text-heading_large slds-p-vertical_xx-small">No event found</h2>
-                <p class="slds-text-body slds-p-vertical_xx-small">The link you followed doesn't contain information to any registration we have on file.</p>
-            </apex:outputPanel>
-            <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small" rendered="{!eventOver}">
-                <h2 class="slds-text-heading_large slds-p-vertical_xx-small">Event over</h2>
-                <p class="slds-text-body slds-p-vertical_xx-small">We're sorry, the event {!evt.Event_Name__c} {!IF(!ISBLANK(evt.Event_Instance_Title__c), ' - ' + evt.Event_Instance_Title__c, '')} has already occured and your registration can not be cancelled.</p>
-            </apex:outputPanel>
-            <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1 regularLists">
-                <apex:outputText escape="false" value="{!eventPage.Event_Footer__c}"/>
+                    <!-- EVENT CLOSED MESSAGE -->
+                    <apex:outputPanel rendered="{!eventIsClosed}" layout="block" styleClass="slds-col slds-p-vertical_x-small slds-size_1-of-1 regularLists">
+                        <h2 class="slds-text-heading_large">
+                            <apex:outputText value="{!eventPage.Event_Name__c}"/>
+                        </h2>
+                        <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
+                            <h3 class="slds-text-heading_medium">
+                                {!evtInstance.Instance_Title__c}
+                            </h3>
+                        </apex:outputPanel>
+                        <div class="slds-col slds-p-vertical_x-small slds-size_1-of-1 regularList">
+                            <p class="slds-text-body">
+                                <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"/>
+                            </p>
+                        </div>
+                    </apex:outputPanel>
+
+                    <!-- EVENT CANCELLED MESSAGE -->
+                    <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small regularLists" rendered="{!eventRegistration.Status__c = 'Cancelled'}">
+                        <h2 class="slds-text-heading_large slds-p-vertical_xx-small">Your registration has been Cancelled</h2>
+                        <p class="slds-text-body slds-p-vertical_xx-small">The registration record we have on file has been cancelled.</p>
+                    </apex:outputPanel>
+
+                    <!-- EVENT NOT FOUND MESSAGE -->
+                    <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small regularLists" rendered="{!eventNotFound && !eventIsClosed}">
+                        <h2 class="slds-text-heading_large slds-p-vertical_xx-small">No event found</h2>
+                        <p class="slds-text-body slds-p-vertical_xx-small">The link you followed doesn't contain information to any registration we have on file.</p>
+                    </apex:outputPanel>
+
+                    <apex:outputPanel layout="none" rendered="{!!eventIsClosed && !eventNotFound && eventRegistration.Status__c != 'Cancelled'}">
+                        <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small regularLists">
+                            <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
+                                <apex:outputText value="{!eventPage.Event_Cancel_Review_Title__c}"/>
+                            </h2>
+                            <p class="slds-text-body slds-p-vertical_xx-small regularLists">
+                                <apex:outputText value="{!eventPage.Event_Cancel_Review_Description__c}" escape="false"/>
+                            </p>
+                        </div>
+                        <div id="reviewWrapper" class="slds-col slds-size_1-of-1 slds-p-vertical_x-small regularLists">
+                            <h2 class="slds-text-heading_large">
+                                <apex:outputText value="{!eventPage.Event_Name__c}"/>
+                            </h2>
+                            <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
+                                <h3 class="slds-text-heading_medium">
+                                    {!evtInstance.Instance_Title__c}
+                                </h3>
+                            </apex:outputPanel>
+                            <p class="slds-text-body slds-p-vertical_xx-small regularLists">
+                                <apex:outputText escape="false" value="{!eventPage.Event_description__c}"/>
+                            </p>
+                            <ul class="slds-list_dotted">
+                                <apex:repeat value="{!appointments}" var="ap">
+                                    <li>
+                                        <apex:outputText value="{!ap.Appointment_Title__c}"/>
+                                        <apex:outputText value="{!ap.Appointment_Category__c}" rendered="{!IF(!ISBLANK(ap.Appointment_Category__c), true, false)}"/>
+                                        <br/><em>
+                                            <apex:outputText value="{!ap.Appointment_Type__c}"/>
+                                        </em>
+                                    </li>
+                                </apex:repeat>
+                            </ul>
+                            <apex:outputPanel layout="block" rendered="{!IF (evt.Status__c != 'Cancelled', true, false)}">
+                                <p class="slds-text-body slds-p-vertical_small">
+                                    <apex:commandLink action="{!cancelRegistration}" Value="Cancel Regisistration" id="cancelReg" onClick="return confirm('Are you sure you want to cancel this registration?');" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                                </p>
+                            </apex:outputPanel>
+                            <apex:outputPanel layout="block" rendered="{!IF (evt.Status__c = 'Cancelled', true, false)}">
+                                <p class="slds-text-body slds-p-vertical_xx-small warning">
+                                    <apex:outputText value="{!eventPage.Event_Cancelled_Notification_Text__c}"/>
+                                </p>
+                            </apex:outputPanel>
+
+                        </div>
+                    </apex:outputPanel>
+                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small regularLists">
+                        <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"/>
+                    </div>
+                </apex:form>
             </div>
         </apex:define>
     </apex:composition>
