--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -32,18 +32,19 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 <script src="{!recaptcha.apiUrl}?render={!recaptcha.publicKey}" type="text/javascript"></script>
                 <script>
                     const googleRecaptchaV3 = true;
-                    function getRecaptchaToken() {
-                        return new Promise((resolve, reject) => {
+                    document.addEventListener('DOMContentLoaded', function () {
+                        document.querySelector("[id$=submitReg2]").addEventListener("click", function (e) {
+                            alert('click');
+                            e.preventDefault();
                             grecaptcha.ready(function () {
-                                grecaptcha.execute('{!recaptcha.publicKey}',
-                                    {action: 'submit'}).then(function (token) {
+                                grecaptcha.execute('{!recaptcha.publicKey}', {action: 'submit'}).then(function (token) {
                                     let responseField = document.querySelector("[id$=recaptchaResponse]");
                                     responseField.value = token;
-                                    return true;
+                                    document.querySelector("[id$=submitReg1]").click();
                                 });
                             });
                         });
-                    };
+                    }, false);
                 </script>
             </apex:outputPanel>
         </apex:define>
@@ -51,7 +52,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap" style="width:100%">
 
@@ -811,9 +812,12 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <apex:inputHidden id="recaptchaResponse" value="{!recaptchaResponse}" rendered="{!recaptcha.version = 3}"/>
 
                         <!-- Submit buttons -->
-                        <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1">
-                            <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); recaptcha(); return checkForm();" Value="{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}" id="submitReg1" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                        </div>
+                        <apex:outputPanel layout="block" styleClass="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1" style="{!IF(recaptcha.version == 3, 'display:none', '')}">
+                            <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); return checkForm();" Value="{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}" id="submitReg1" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                        </apex:outputPanel>
+                        <apex:outputPanel layout="block" styleClass="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1" rendered="{!recaptcha.version == 3}">
+                            <a href="#" id="submitReg2" class="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small">{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}</a>
+                        </apex:outputPanel>
                         <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1 regularLists">
                             <apex:outputText escape="false" value="{!eventPage.Event_Footer__c}"/>
                         </div>
