--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -745,7 +745,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </div>
                             <apex:outputPanel layout="block" styleClass="slds-form-element {!IF(CONTAINS(eventPage.Ask_Accessibility_Needs__c, 'require'), 'slds-is-required', '')}" rendered="{!eventRegistration.Accessibility_Need__c == 'Yes'}">
                                 <apex:outputLabel for="AccessibilityDetails" styleClass="slds-form-element__label">
-                                    {!IF(!ISBLANK(eventPage.Accessibility_Detail_Label__c), eventPage.Accessibility_Detail_Label__c, 'Please indicate your accessibility request below.')} {!eventRegistration.Accessibility_Need__c}
+                                    {!IF(!ISBLANK(eventPage.Accessibility_Detail_Label__c), eventPage.Accessibility_Detail_Label__c, 'Please indicate your accessibility request below.')}
                                     <apex:outputText escape="false" rendered="{!IF(eventPage.Ask_Accessibility_Needs__c == 'Ask and require', true, false)}">
                                         <abbr class="slds-required" title="required">*</abbr>
                                     </apex:outputText>
@@ -762,7 +762,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Dietary_Restrictions__c != 'Do not ask' && !ISBLANK(eventPage.Ask_Dietary_Restrictions__c), true, false)}">
                             <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Dietary_Restrictions__c, 'require'), 'slds-is-required', '')}">
                                 <apex:outputLabel for="Dietary" styleClass="slds-form-element__label">
-                                    {!IF(!ISBLANK(eventPage.Dietary_Resstrictions_Label__c), eventPage.Dietary_Resstrictions_Label__c, 'To help us accommodate everyone\'s needs, please let us know if you have any dietary restrictions or allergies. If so, kindly specify them below.')}
+                                    {!IF(!ISBLANK(eventPage.Dietary_Resstrictions_Label__c), eventPage.Dietary_Resstrictions_Label__c, 'To help us accommodate everyones needs, please let us know if you have any dietary restrictions or allergies. If so, kindly specify them below.')}
                                     <apex:outputText escape="false" rendered="{!IF(eventPage.Ask_Dietary_Restrictions__c == 'Ask and require', true, false)}">
                                         <abbr class="slds-required" title="required">*</abbr>
                                     </apex:outputText>
