--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -67,8 +67,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                     <!--Event is Open -->
                     <apex:outputPanel rendered="{!!eventIsClosed}" layout="none">
-                        <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                            <p class="slds-text-body slds-p-vertical_xx-small regularLists">
+                        <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small regularLists">
+                            <p class="slds-text-body slds-p-vertical_xx-small">
                                 <apex:outputText escape="false" value="{!eventPage.Event_Appointment_Description__c}"/>
                             </p>
                         </div>
